# Civ-V-AP-World

./: README.md  __init__.py  cli.py  locations.py  pyproject.toml  rules.py
apmod/: APMod.civ5sln  APMod.civ5suo
apmod/APMod/: APFunctions.lua  APMod.civ5proj  BuildingTextInfos.xml  Buildings.xml  HandicapInfos.xml  NationalWonderTextInfos.xml  NationalWonders.xml  Policies.xml  PolicyBranches.xml  Tech_Text.xml  Technologies.xml  TechnologyTextInfos.xml  TextInfos.xml  UnitTextInfos.xml  Units.xml  WorldWonders.xml
apmod/APMod/Icons/: AP_Policy_256.dds  AP_Policy_64.dds  AP_Promotion_32.dds  AP_Promotion_64.dds  AP_Tech_128.dds  AP_Tech_32.dds  AP_Tech_45.dds  AP_Tech_80.dds  AP_Tech_Icons.xml
apworld/: CivVClient.py  Tech_Array.py  __init__.py  archipelago.json  client.py  command_processor.py  constants.py  container.py  context.py  dataclasses.py  death_link.py  enums.py  helpers.py  items.py  locations.py  options.py  regions.py  requirements.py  settings.py  tuner.py  world.py
apworld/items/: __init__.py  core.py  eras.py  filler.py  policies.py  promotions.py  settlers.py  techs.py  traps.py
apworld/locations/: __init__.py  buildings.py  core.py  national_wonders.py  policies.py  promotions.py  settlers.py  techs.py  units.py  victories.py  world_wonders.py
apworld/templates/apmod/: APFunctions.lua  APOptions.xml  BuildingTextInfos.xml  Buildings.xml  CivVAPMod (v 1).modinfo  CivVAPMod (v 11).modinfo  NationalWonderTextInfos.xml  Policies.xml  PolicyBranchTextInfos.xml  Processes.xml  Units.xml  (+8 more)
apworld/tuner/: __init__.py  exceptions.py  tuner.py
(+9 files in other folders)
