[project]
name = "civ-v-ap-world"
version = "0.6.2"
description = ""
authors = [
    {name = "1313e", email = "1313e@live.nl"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [{include = "apworld"}]

[tool.poetry.scripts]
civvap = "cli:group_cli"

[tool.poetry.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
